# papyrus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/papyrus/: _chart_renderer.py  _footnote_utils.py  _image_utils.py  _mermaid_renderer.py  _preview_css_js.py  _preview_dashboard.py  _preview_pdf.py  _thumbnail.py  _writing_rules.py  brand.py  catalog.py  parser.py  preview.py  renderer.py  server.py  validator.py
src/papyrus/static/: base.css  tokens.css
src/papyrus/templates/_base/: base.html  custom.html
src/papyrus/templates/custom/: meta.yaml  style.css
src/papyrus/templates/executive-summary/: meta.yaml  style.css
src/papyrus/templates/meeting-minutes/: meta.yaml  style.css  template.html
src/papyrus/templates/proposal/: meta.yaml  style.css  template.html
src/papyrus/templates/retrospective/: meta.yaml  style.css
src/papyrus/templates/status-report/: meta.yaml  style.css
