[project]
name = "papyrus"
version = "0.1.0"
description = "마크다운을 브랜드 A4 HTML 보고서로 변환하는 MCP 도구"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "jinja2>=3.1",
    "markdown>=3.5",
    "pyyaml>=6.0",
    "openpyxl>=3.1.5",
    "playwright>=1.40",
    "pillow>=10.0",
]

[project.scripts]
papyrus = "papyrus.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
